# opensoft2024-backend

./: .dockerignore  .env.example  .gitignore  ATLAS.md  Dockerfile  README.md  countries.json  dockerfile  pyproject.toml  requirements.txt  vercel.json
src/: cache_system.py  config.py  db.py  main.py  schemas.py
src/routers/: auth.py  cast.py  countries.py  country_count.json  embeddings.py  genre.py  genre_top.py  imdb.py  movie.py  recomemndation.py  recommendation.py  region_top.py  search.py  update_info.py  user.py
src/tests/: conftest.py
src/tests/test_routes/: test_movie.py  test_user.py
src/utils/: ada_embedder.py  recommend.py  text_embedder.py
